--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <br>
   <span class = "Authors">
       <a href="https://warshallrho.github.io/" target="_blank">Ruihai Wu<sup>1*</sup> &nbsp; &nbsp;
-      <a href="https://tritiumr.github.io/" target="_blank">Chuanrui Ning</a><sup>1*</sup> &nbsp; &nbsp;
+      <a href="https://tritiumr.github.io/" target="_blank">Chuanruo Ning</a><sup>1*</sup> &nbsp; &nbsp;
       <a href="https://zsdonghao.github.io/" target="_blank">Hao Dong</a><sup>1</sup> &nbsp; &nbsp;<br>
       <i>(*: indicates joint first authors, order determined by coin flip)</i><br><br>
       <sup>1</sup> Peking University </a> &nbsp;
