--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
   <br>
   <br>
   <span class = "Authors">
-      <a href="https://warshallrho.github.io/" target="_blank">Ruihai Wu<sup>1*</sup> &nbsp; &nbsp;
+      <a href="https://warshallrho.github.io/" target="_blank">Ruihai Wu<sup>1,2*</sup> &nbsp; &nbsp;
       <a href="https://tritiumr.github.io/" target="_blank">Chuanruo Ning</a><sup>1*</sup> &nbsp; &nbsp;
-      <a href="https://zsdonghao.github.io/" target="_blank">Hao Dong</a><sup>1</sup> &nbsp; &nbsp;<br>
+      <a href="https://zsdonghao.github.io/" target="_blank">Hao Dong</a><sup>1,2</sup> &nbsp; &nbsp;<br>
       <i>(*: indicates joint first authors, order determined by coin flip)</i><br><br>
       <sup>1</sup> Peking University </a> &nbsp;
+      <sup>2</sup> BAAI </a> &nbsp;
   </span>
   </div>
 <br>
 <div class = "material">
-        <a href="https://arxiv.org/abs/2303.11057" target="_blank">ArXiv Preprint 2023</a>
+        <a href="https://arxiv.org/abs/2303.11057" target="_blank">International Conference on Computer Vision (ICCV) 2023</a>
 </div>
 <br>
 <br>
 <div class = "material">
         <a href="https://arxiv.org/pdf/2303.11057.pdf" target="_blank">[Paper]</a> &nbsp; &nbsp;
-        <a target="_blank">[Code]</a> &nbsp; &nbsp;
-        <!-- <a href="https://github.com/warshallrho/VAT-Mart" target="_blank">[Code]</a> -->
+        <a href="https://github.com/TritiumR/DeformableAffordance" target="_blank">[Code]</a> &nbsp; &nbsp;
         <a href="paper.bib" target="_blank">[BibTex]</a> &nbsp; &nbsp;
 </div>
 
@@ -144,10 +144,10 @@
 <div class="12u$ 1u$(xsmall)">   -->
 <div class = "myBibTex">
   <pre style="background-color: #EBEBEB;">
-@article{wu2023learning,
+@inproceedings{wu2023learning,
   title={Learning Foresightful Dense Visual Affordance for Deformable Object Manipulation},
   author={Wu, Ruihai and Ning, Chuanruo and Dong, Hao},
-  journal={arXiv preprint arXiv:2303.11057},
+  booktitle={IEEE International Conference on Computer Vision (ICCV)},
   year={2023}
 }
   </pre>
