--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   Contact
 </div>
 <p class = "abstractText">
-  If you have any questions, please feel free to contact <a href="https://warshallrho.github.io/" target="_blank">Ruihai Wu</a> at wuruihai_at_pku_edu_cn and <a href="https://tritiumr.github.io/" target="_blank">Chuanruo Ning</a> at chuanruo_at_pku_edu_cn.
+  If you have any questions, please feel free to contact <a href="https://warshallrho.github.io/" target="_blank">Ruihai Wu</a> at wuruihai_at_pku_edu_cn and <a href="https://tritiumr.github.io/" target="_blank">Chuanruo Ning</a> at chuanruo_at_stu_pku_edu_cn.
 </p>
 
 
